--- a/data/config/settings.json
+++ b/data/config/settings.json
@@ -5,4 +5,9 @@
 	"MagicVectorThrusterSelkieY2": 100,
 	"MagicVectorThrusterSelkieX3": 10,
 	"MagicVectorThrusterSelkieY3": 75,
+
+	graphics":{
+		"fx":{
+			"kol_shield":"graphics/fx/kol_shield_fx.png",
+		}
 }
