--- a/data/config/settings.json
+++ b/data/config/settings.json
@@ -1,6 +1,6 @@
 {
 	"MagicVectorThrusterSelkieX": 18,
-	"MagicVectorThrusterSelkieY": 135,
+	"MagicVectorThrusterSelkieY": 80, #135
 	"MagicVectorThrusterSelkieX2": 13,
 	"MagicVectorThrusterSelkieY2": 100,
 	"MagicVectorThrusterSelkieX3": 10,
