New Dawn portraits

--- a/data/config/settings.json
+++ b/data/config/settings.json
@@ -77,6 +77,16 @@
 	
 	
 	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
 	#Shhh go away!
 	
 	
@@ -290,6 +300,8 @@
 			"zea_dawn_1":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/portraits/zea_dawn_1.png",
 			"zea_dawn_2":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/portraits/zea_dawn_2.png",
 			"zea_dawn_3":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/portraits/zea_dawn_3.png",
+			"zea_dawn_4":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/portraits/zea_dawn_4.png",
+			"zea_dawn_5":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/portraits/zea_dawn_5.png",
 			"zea_dusk_1":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/portraits/zea_dusk_1.png",
 			"zea_dusk_2":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/portraits/zea_dusk_2.png",
 			"zea_dusk_3":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/portraits/zea_dusk_3.png",
