Added storms to the nebulas in Nullspace

--- a/data/config/settings.json
+++ b/data/config/settings.json
@@ -275,6 +275,7 @@
 			"nebula_zea_black_map":"graphics/terrain/nebula_kol_black_shiny_map.png",
 			"nebula_zea_black_shiny":"graphics/terrain/nebula_kol_black.png",
 			"nebula_zea_black_shiny_map":"graphics/terrain/nebula_kol_black_map.png",
+			"nebula_zea_black_shiny_glow":"graphics/terrain/nebula_kol_black_shiny_glow.png",
 			"nebula_zea_redblue":"graphics/terrain/nebula_kol_redblue.png",
 			"nebula_zea_redblue_map":"graphics/terrain/nebula_kol_redblue_map.png",
 			"nebula_zea_red":"graphics/terrain/nebula_kol_red.png",
