--- a/data/config/settings.json
+++ b/data/config/settings.json
@@ -5,6 +5,9 @@
 	"MagicVectorThrusterSelkieY2": 100,
 	"MagicVectorThrusterSelkieX3": 10,
 	"MagicVectorThrusterSelkieY3": 75,
+	"plugins": {
+		"KOLParticleController": "org.selkie.kol.impl.combat.ParticleController"
+	},
 
 	
 	
