--- a/data/config/settings.json
+++ b/data/config/settings.json
@@ -6,7 +6,7 @@
 	"MagicVectorThrusterSelkieX3": 10,
 	"MagicVectorThrusterSelkieY3": 75,
 	"plugins": {
-		"KOLParticleController": "org.selkie.kol.impl.combat.ParticleController"
+		"KOLParticleController": "org.selkie.kol.impl.combat.plugins.KOLCombatPlugin"
 	},
 
 	
