--- a/data/config/settings.json
+++ b/data/config/settings.json
@@ -253,13 +253,14 @@
 		"fx":{
 			"kol_shield":"graphics/fx/kol_shield_fx.png",
 			"zea_elysia_vortice":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/fx/zea_elysia_vortice.png",
-			"zea_nian_targetingRing":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/fx/zea_nian_targetingring.png"
+			"zea_nian_targetingRing":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/fx/zea_nian_targetingring.png",
+			"fake_vulcan":"graphics/weapons/vulcan_cannon_turret.png"
 		},
 		"kol_fx":{
 			"zea_shield_dawn":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/fx/zea_shield_dawn.png",
 			"zea_shield_dusk":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/fx/zea_shield_dusk.png",
 			"zea_shield_elysia":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/fx/zea_shield_elysia.png",
-			"zea_shield_elysia_2":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/fx/zea_shield_elysia_2.png",
+			"zea_shield_elysia_2":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/fx/zea_shield_elysia_2.png"
 		},
 		"zea_phase_glows": {
 			"zea_boss_yukionna_glow1":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/ships/zea_boss_yukionna_glow1.png",
@@ -316,7 +317,7 @@
 			"zea_idk2":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/portraits/zea_idk2.png",
 			"zea_idk3":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/portraits/zea_idk3.png",
 			"zea_edf1":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/portraits/zea_edf_1.png",
-			"zea_edf2":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/portraits/zea_edf_2.png",
+			"zea_edf2":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/portraits/zea_edf_2.png"
 		},
 		"icons": {
 			"coronal_cap_top":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/icons/hullsys/coronal_cap_top.png",
@@ -324,13 +325,16 @@
 			"coronal_cap_bottom":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/icons/hullsys/coronal_cap_bottom.png",
 			"kol_composite": "graphics/icons/hullsys/kol_composite_ico.png",
 			"kol_primshield": "graphics/icons/hullsys/kol_primshield_ico.png",
-			"kol_modules": "graphics/icons/hullsys/kol_modules_ico.png"
+			"kol_modules": "graphics/icons/hullsys/kol_modules_ico.png",
+			"kol_composite_grey": "graphics/icons/hullsys/kol_composite_grey_ico.png",
+			"kol_primshield_grey": "graphics/icons/hullsys/kol_primshield_grey_ico.png",
+			"kol_modules_grey": "graphics/icons/hullsys/kol_modules_grey_ico.png"
 		},
 		"lore_item": {
 			"zea_dawn":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/icons/cargo/overlays/zea_overlay_dawn.png",
 			"zea_dusk":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/icons/cargo/overlays/zea_overlay_dusk.png",
-			"zea_elysians":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/icons/cargo/overlays/zea_overlay_edf.png",
-		},
+			"zea_elysians":"data/strings/com/fs/starfarer/api/impl/campaign/you can hear it cant you/our whispers through the void/our song/graphics/icons/cargo/overlays/zea_overlay_edf.png"
+		}
 	},
 	"designTypeColors":{
 		"Knights of Ludd":[25,115,10,255],
@@ -339,6 +343,6 @@
 		"Elysia":[255,253,222,255]
 	},
 	"ruleCommandPackages": [
-        "org.selkie.kol.impl.rulecmd",
-    ],
+        "org.selkie.kol.impl.rulecmd"
+    ]
 }
