--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,10 @@ knights_of_ludd.iml
 .idea/uiDesigner.xml
 .idea/vcs.xml
 .run/Run Starsector w_o Launcher.run.xml
+.run/Run Starsector w_o Launcher.run.xml
+.idea/vcs.xml
+.idea/uiDesigner.xml
+.idea/modules.xml
+.idea/kotlinc.xml
+.idea/icon.svg
+.idea/artifacts/KnightsOfSelkie_jar.xml
