--- a/data/config/settings.json
+++ b/data/config/settings.json
@@ -374,7 +374,7 @@
 	"designTypeColors":{
 		"Knights of Ludd":[25,115,10,255],
 		"Dawntide":[0,255,100,255],
-		"Duskborne":[25,25,25,255],
+		"Dusk":[25,25,25,255],
 		"Elysia":[255,253,222,255],
 	},
 	"plugins": {
